tests/NormalTests/paczka1/fuzzy1/60587566.err
Error in line 8: Qp7rZPkX A492 77,2
Error in line 19: mdaodJM S829 27,7
Error in line 26: Qp7rZPkX A492 99,3
Error in line 28: WiKb S829 27,5
